# backend/src/flow/flow.controller.ts
@@ -1,15 +1,17 @@
-import { Controller, Get } from "@nestjs/common";
+import { Controller, Get, Param } from "@nestjs/common";
 import { FlowGatewayService } from "./services/gateway.service";
 import { FlowEmulatorService } from "./services/emulator.service";
 import { FlowCliService } from "./services/cli.service";
 import { GetFlowCliInfoResponse } from "@flowser/types/generated/responses/flow";
+import { FlowAccountStorageService } from "./services/storage.service";
 
 @Controller("flow")
 export class FlowController {
   constructor(
     private flowGatewayService: FlowGatewayService,
     private flowEmulatorService: FlowEmulatorService,
-    private flowCliService: FlowCliService
+    private flowCliService: FlowCliService,
+    private flowAccountStorageService: FlowAccountStorageService
   ) {}
 
   @Get("version")
@@ -43,5 +45,10 @@ export class FlowController {
   @Get("debug/emulator/logs")
   async getLogs() {
     return this.flowEmulatorService.logs;
+  }
+
+  @Get("storage/:address")
+  async getAccountStorage(@Param("address") address) {
+    return this.flowAccountStorageService.getAccountStorage(address);
   }
 }
